2004-05-15  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Sort parents and callers too.

	* igprof-analyse: Improve by-caller sorting.

	* IgProf.cc: Counters are now large numbers.

	* igprof-analyse: Optionally output libraries.  Sort by caller.

42004-05-15  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc, IgProfFileDesc.cc, IgProfMem.cc, IgProfPerf.cc:
	Remove unnecessary semi-colons.

	* IgProf.h, IgProfMacros.h: Split macros off to another header.
	Provide easier interface to registering hooks, provide trampolines
	directly and support dual hooks for binaries that have symbols in
	themselves in addition to being defined in system libraries.
	Heavy work on multi-thread profiling issues.  Add documentation.
	Include program name and process-id into the dump if possible.
	* IgProfFileDesc.cc: New hook definition scheme.  Document.
	* IgProfMem.cc: New hook definition scheme.  Document.
	* IgProfPerf.cc: New hook definition scheme.  Document.
	Heavy work on multi-threaded program profiling.
	* test/test_load.cc: New multi-threaded stress test.
	* src/.gdbinit: New.

2004-05-14  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.h: Restore old interface.

	* IgProfPerf.cc: Disable/enable timer and signal handler when
	the module is disabled/enabled.  Rearrange init sequence so
	we can call system pthread_create().

	* IgProf.cc: Remove messing with thread-specific data, it just
	creates problems -- it allocates memory and we are sometimes
	unable to capture all threads.  Just make sure the performance
	profiler doesn't call us from a signal handler.

	* IgProfPerf.cc: Pass valid memory to thread start routine.

	* IgProf.cc: Properly check if the program is multi-threaded and
	remember that in all decisions.  Mark program non-threaded when we
	are quitting to avoid invoking into pthreads in destructors
	(e.g. from late-delivered profile signal).  Try to work around
	bugs in linux recursive mutex handling within signals.
	* IgProf.h (IgProfLock): Update.
